# neural-network-framework

./: .gitignore  CMakeLists.txt  README.md  TODO  amam.yql  main
block/: Block.cpp
examples/: demo.cpp
include/nn/: any_layer.hpp  cross_entropy.hpp  linear_layer.hpp  mnist.hpp  mse_loss.hpp  network.hpp  relu_layer.hpp
matrix/: matrix.hpp
tests/: CMakeLists.txt  test_linear_gradcheck.cpp
